# prediction-modeling-toolkit

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  stake_sizing.md
docs/gallery/: README.md
docs/gallery/data/: probability_surface.csv
examples/: 01_calibration_methods.py  02_bins_trust_kelly.py  03_elo_season.py  04_stacking_demo.py  05_pipeline_demo.py  make_gallery.py
examples/paraview/: make_probability_surface_csv.py
src/pmt/: __init__.py
src/pmt/calibration/: __init__.py  apply.py  curves.py
src/pmt/ensembling/: __init__.py  stacking.py
src/pmt/evaluation/: __init__.py  cross_validation.py  metrics.py
src/pmt/pipeline/: __init__.py  base.py  parallel.py
src/pmt/ratings/: __init__.py  elo.py
src/pmt/staking/: __init__.py  bin_trust.py  kelly.py
tests/: conftest.py  test_calibration_apply.py  test_calibration_curves.py  test_ensembling.py  test_evaluation.py  test_pipeline.py  test_ratings.py  test_staking.py
